<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_VariableLengthArrayInfo" Id="{0e12b149-8504-4230-accd-eef84d706d5d}">
    <Declaration><![CDATA[TYPE ST_VariableLengthArrayInfo :
STRUCT
    nLowerBound : DINT;
    nUpperBound : DINT;
    nSize       : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>